# ginger-infra

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  metadata.toml  releaser.toml  services.toml
.github/workflows/: CI.yml
src/: main.rs  portalInstaller.rs
