[package]
description = "Inra related command"
edition = "2021"
name = "ginger-infra"
version = "0.3.0-nightly.0"

[package.metadata]
organization = "ginger-society"

[dependencies]
IAMService = {path = "./IAMService_client"}
MetadataService = {path = "./MetadataService_client"}
clap = {version = "4.5.7", features = ["derive"]}
colored = {version = "2.0.1"}
ginger-shared-rs = {version = "0.42.0-nightly.0", organization = "ginger-society"}
tokio = {version = "1", features = ["full"]}
